--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </main>
         <footer>
-            <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | Made with <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
+            <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | With <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
         </footer>
     
     </div>
@@ -59,12 +59,12 @@
     <script>
         /* Open the sidenav */
         function openNav() {
-        document.getElementById("mySidenav").style.width = "100%";
+            document.getElementById("mySidenav").style.width = "100%";
         }
 
         /* Close/hide the sidenav */
         function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("mySidenav").style.width = "0";
         }
     </script>
 </body>
