--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             </div>
         </header>
         <main>
-            <div class="flex-main">
-                <article class="tagline">
+            <article>
+                <section class="tagline">
                     <h1>Pembayaran Bulanan</h1>
                     <h1><span>Kini Lebih Mudah dan Cepat</span></h1>
                     <hr>
                     <p>Memperkenalkan</p>
                     <h2>Portal Pembayaran Online</h2>
                     <h3>Pondok Pesantren Daarul Rahman</h3>
-                </article>
-                <article class="image-main">
+                </section>
+                <section class="image-main">
                     <img src="lambang_dr_jakarta.png" alt="" srcset="">
-                </article>
-            </div>
+                </section>
+            </article>
         </main>
         <footer>
             <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | With <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
