--- a/footer/index.html
+++ b/footer/index.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
-
-<html>
- <head>
-   <link rel="stylesheet" type="text/css" href="main.css" />
- </head>
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+  <!-- <link rel="stylesheet" href="navbar.css"> -->
+  <title>Homepage Mockup</title>
+</head>
 <body>
- <div id="page-container">
-   <div id="content-wrap">
-     <!-- all other page content -->
-     <h1>Ghaniy Ganteng</h1>
-   </div>
-   <footer id="footer">Ghaniy Ganteng</footer>
- </div>
-</body>
+  <div class="background"></div>
+  <header>
+    <div class="container">
+      <div class="logo">
+        <img src="logo_dr.png" alt="" srcset="">
+      </div>
+      <nav class="navbar">
+          <a href="#">Changelog</a>
+          <a href="#">Developer</a>
+          <a href="#">Bantuan</a>
+          <a href="#" class="login">Login</a>
+      </nav>
+      <!-- Mobile Navbar -->
+      <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="#">Changelog</a>
+          <a href="#">Developer</a>
+          <a href="#">Bantuan</a>
+          <a href="#" class="login">Login</a>
+      </div>
+    
+      <div class="hamburger-menu" onclick="openNav()">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+      <!-- End Mobile Navbar -->
 
+    </div>
+  </header>
+  <article>
+    <div class="container">
+      <div class="tagline">
+        <h1>Pembayaran Bulanan</h1>
+        <h1><span>Kini Lebih Mudah dan Cepat</span></h1>
+        <hr>
+        <p>Memperkenalkan</p>
+        <h2>Portal Pembayaran Online</h2>
+        <h3>Pondok Pesantren Daarul Rahman</h3>
+      </div>
+      <div class="image-main">
+        <img src="lambang_dr_jakarta.png" alt="" srcset="">
+      </div>
+    </div>
+  </article>
+
+  <footer>
+    <div class="container">
+      <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | With <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
+    </div>
+  </footer>
+  <script>
+    /* Open the sidenav */
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "100%";
+    }
+
+    /* Close/hide the sidenav */
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+    }
+</script>
+
+</body>
 </html>
