--- a/footer/index.html
+++ b/footer/index.html
@@ -52,12 +52,13 @@
       <div class="image-main">
         <img src="lambang_dr_jakarta.png" alt="" srcset="">
       </div>
+      <button class="start"><span>Mari kita mulai</span><i class="bi bi-arrow-right-short"></i></button>
     </div>
   </article>
 
   <footer>
     <div class="container">
-      <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | With <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
+      <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | Made with <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
     </div>
   </footer>
   <script>
