--- a/footer/index.html
+++ b/footer/index.html
@@ -58,7 +58,8 @@
 
   <footer>
     <div class="container">
-      <p>&copy 2021 Copyright Pondok Pesantren Daarul Rahman | Made with <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
+      <p class="desktop">&copy 2021 Copyright Pondok Pesantren Daarul Rahman | Made with <i class="bi bi-heart-fill" style="color: red;"></i> by Abdul Hakim Ghaniy</p>
+      <p class="mobile">&copy 2021 Copyright Pondok Pesantren Daarul Rahman</p>
     </div>
   </footer>
   <script>
