--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                         <a href="#">Lupa Password?</a>
                     </div>
                 </div>
-                <button class="start" type="submit"><span>Login</span><i class="bi bi-arrow-right-short"></i></button>
+                <button class="start" type="submit"><span>Login</span></button>
             </form>
             <div class="not-registered">
                 <p>Belum mempunyai akun?</p>
