--- a/login.html
+++ b/login.html
@@ -39,9 +39,15 @@
                 </div>
                 <button class="start" type="submit"><span>Login</span></button>
             </form>
+            <div class="login-oauth">
+                <p>Atau Login Menggunakan</p>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-google"></i></a>
+                <a href=""><i class="bi bi-github"></i></a>
+            </div>
+
             <div class="not-registered">
-                <p>Belum mempunyai akun?</p>
-                <a href="">Buat Akun.</a>
+                <p>Belum mempunyai akun? <a href="" style="color: forestgreen;">Buat Akun</a></p>
             </div>
         </div>
     </article>
