--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="assets/images/logo_dr.png" alt="" srcset="">
       </div>
       <nav class="navbar">
-          <a href="#">Changelog</a>
+          <a href="changelog.html">Changelog</a>
           <a href="#">Developer</a>
           <a href="#">Bantuan</a>
           <a href="login.html" class="login">Login</a>
