--- a/login.html
+++ b/login.html
@@ -10,46 +10,55 @@
 </head>
 <body>
     <div class="background"></div>
-    <article>
-        <div class="container">
-            <header>
-                <div class="logo">
-                    <img src="assets/images/logo_dr.png" alt="" srcset="">
-                </div>
+
+    <div class="container">
+        <header>
+            <div class="logo">
+                <img src="assets/images/logo_dr.png" alt="" srcset="">
+            </div>
+        </header>
+        <article>
+            <section class="login-title">
                 <h1>Login</h1>
                 <p>Masuk untuk mulai menggunakan Aplikasi</p>
-            </header>
-            <form action="">
-                <div class="field input">
-                    <label for="form-login-email">Email</label><br>
-                    <input type="text" id="form-login-email" name="form-login-email" placeholder="contoh@email.com">    
-                </div>
-                <div class="field input">
-                    <label for="form-login-password">Password</label><br>
-                    <input type="password" id="form-login-password" name="form-login-password">    
-                </div>
-                <div class="field checkbox">
-                    <div class="remember-me">
-                        <input type="checkbox" class="checkbox">
-                        <label for="form-remember-me">Ingat Saya</label>    
+            </section>
+            <section class="form login">
+                <form action="/client_dashboard/index.html">
+                    <div class="field input">
+                        <label for="form-login-email">Email</label><br>
+                        <input type="text" id="form-login-email" name="form-login-email" placeholder="contoh@email.com">    
                     </div>
-                    <div class="forgot-password">
-                        <a href="#">Lupa Password?</a>
+                    <div class="field input">
+                        <label for="form-login-password">Password</label><br>
+                        <input type="password" id="formPassword" name="form-login-password">
+                        <i class="bi bi-eye-slash" id="togglePassword"></i>
                     </div>
+                    <div class="clear"></div>
+                    <div class="field checkbox">
+                        <div class="remember-me">
+                            <input type="checkbox" class="checkbox">
+                            <label for="form-remember-me">Ingat Saya</label>    
+                        </div>
+                        <div class="forgot-password">
+                            <a href="#">Lupa Password?</a>
+                        </div>
+                    </div>
+                    <button class="login" type="submit"><span>Mulai !</span></button>
+                </form>    
+                <div class="login-oauth">
+                    <p>Atau Login Menggunakan</p>
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-google"></i></a>
+                    <a href=""><i class="bi bi-github"></i></a>
                 </div>
-                <button class="start" type="submit"><span>Login</span></button>
-            </form>
-            <div class="login-oauth">
-                <p>Atau Login Menggunakan</p>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-google"></i></a>
-                <a href=""><i class="bi bi-github"></i></a>
-            </div>
-
-            <div class="not-registered">
-                <p>Belum mempunyai akun? <a href="" style="color: forestgreen;">Buat Akun</a></p>
-            </div>
-        </div>
-    </article>
+            </section>
+            <section>
+                <div class="not-registered">
+                    <p>Belum mempunyai akun? <a href="register.html" style="color: forestgreen;">Buat Akun</a></p>
+                </div>
+            </section>  
+        </article>
+    </div>
+    <script src="assets/javascripts/custom.js"></script>
 </body>
 </html>
