Move main page to index_app_with_error_page

--- a/index_app_with_error_page/login.html
+++ b/index_app_with_error_page/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="assets/stylesheets/login.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="stylesheets/login.css">
     <title>Login</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="assets/images/logo_dr.png" alt="" srcset="">
+                <img src="images/logo_dr.png" alt="" srcset="">
             </div>
         </header>
         <article>
@@ -59,6 +59,6 @@
             </section>  
         </article>
     </div>
-    <script src="assets/javascripts/custom.js"></script>
+    <script src="javascripts/custom.js"></script>
 </body>
 </html>
