--- a/index_app_with_error_page/500.html
+++ b/index_app_with_error_page/500.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/stylesheets/main.css">
-    <link rel="stylesheet" href="/assets/stylesheets/error.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="stylesheets/error.css">
     <title>500 Internal Server Error</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <button class="error-button">Ke Beranda</button>
             </form>
         </article>
-        <footer><img src="/assets/images/logo_dr.png" alt="" srcset=""></footer>
+        <footer><img src="images/logo_dr.png" alt="" srcset=""></footer>
     </div>
 
 </body>
