--- a/index_app_with_error_page/index.html
+++ b/index_app_with_error_page/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/stylesheets/main.css">
-  <link rel="stylesheet" href="assets/stylesheets/index.css">
+  <link rel="stylesheet" href="stylesheets/main.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
 
   <!-- <link rel="stylesheet" href="navbar.css"> -->
   <title>Homepage Mockup</title>
@@ -15,7 +15,7 @@
   <div class="container">
     <header>
       <div class="logo">
-        <img src="assets/images/logo_dr.png" alt="" srcset="">
+        <img src="images/logo_dr.png" alt="" srcset="">
       </div>
       <nav class="navbar">
           <a href="changelog.html">Changelog</a>
@@ -51,7 +51,7 @@
         <h3>Pondok Pesantren Daarul Rahman</h3>
       </div>
       <div class="image-main">
-        <img src="assets/images/lambang_dr_jakarta.png" alt="" srcset="">
+        <img src="images/lambang_dr_jakarta.png" alt="" srcset="">
       </div>
       <form action="login.html">
         <button class="start" type="submit"><span>Mari kita mulai</span><i class="bi bi-arrow-right-short"></i></button>
@@ -64,6 +64,6 @@
       </div>
     </footer>
   </div>
-  <script src="assets/javascripts/custom.js"></script>
+  <script src="javascripts/custom.js"></script>
 </body>
 </html>
