Change QR Image URL

--- a/client_dashboard/qris-payment-popup.html
+++ b/client_dashboard/qris-payment-popup.html
@@ -15,7 +15,7 @@
                 <div class="qr-box">
                     <div class="qr-code">
                         <!-- <img src="/client_dashboard/images/QR.png" alt="" srcset=""> -->
-                        <img src="https://api.sandbox.veritrans.co.id/v2/qris/shopeepay/sppq_592797b2-a18d-4079-b49b-a0c734d10df7/qr-code" alt="" srcset="">
+                        <img src="images/QR.png" alt="" srcset="">
                     </div>
                     <div class="qr-expired">
                         <p>QR kadaluarsa dalam</p>
